# Fool

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: ai.rs  config.rs  executor.rs  history.rs  main.rs  parser.rs  repl.rs
