[package]
name = "fool"
version = "0.1.0"
edition = "2021"
description = "A state-machine driven shell with native AI integration"
authors = ["The fool"]

[dependencies]
# Async runtime
tokio = { version = "1.34", features = ["full"] }

# HTTP client for OpenAI API
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Terminal/REPL
rustyline = { version = "14.0", features = ["derive"] }
crossterm = "0.28"

# Markdown rendering in terminal
termimad = "0.30"

# Directory utilities
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async streaming
futures = "0.3"

# Environment variables
dotenv = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "fool"
path = "src/main.rs"
